--- a/client/index.html
+++ b/client/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Fabric Store</title>
+    <title>Trendy Threads</title>
+    <link rel="icon" type="image/png" href="./src/assets/needle.png" />
   </head>
   <body>
     <div id="modal"></div>
